# KeinPlan

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.template.yaml  docker-compose.yaml  payload_manual.json
.github/workflows/: deploy.yaml  pull_request.yaml  release.yaml
backend/: .env  Dockerfile  pyproject.toml  requirements.txt  tox.ini  weekly.tex.jinja
backend/src/: __init__.py  api.py  constants.py  main.py  requirements.txt  time_entry.py  time_sheet.py
backend/src/info/: __init__.py  api.py
backend/src/kaplan/: __init__.py  api.py  constants.py  kaplan_ics.py
backend/src/keinplan_backend/: api.py  constants.py  main.py
backend/src/keinplan_backend/kaplan/: __init__.py  api.py  constants.py  kaplan_ics.py
backend/src/keinplan_backend/time_sheets/: __init__.py  api.py  constants.py  entry.py  sheet.py  span.py  time_sheet.py
backend/src/keinplan_backend/time_sheets/models/: time_entry.py  time_sheet.py
backend/src/keinplan_backend/time_sheets/templates/: jinja_filters.py  weekly.jinja.md  weekly.tex.jinja
backend/src/keinplan_backend/version/: api.py
backend/src/templates/: weekly_time_sheet.jinja.md
backend/src/time_sheets/: __init__.py  api.py  constants.py  entry.py  sheet.py
backend/src/time_sheets/templates/: jinja_filters.py  weekly.jinja.md
backend/src/version/: __init__.py  api.py
backend/templates/: timesheet.jinja.md
e2e/: package-lock.json
frontend/: .env  .env.development  .env.production  Dockerfile  constants.ts  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: date-card.tsx  footer.tsx  kaplan-svg.tsx  loading-spinner.tsx  loading.tsx  msg-box.tsx  navigation.tsx  page-section.tsx  page-wrapper.tsx  time-sheet-generator.tsx  timesheet-generator.tsx
frontend/hooks/: download-file.ts
frontend/pages/: _app.tsx  _document.tsx  auto-mailer.tsx  index.tsx  privacy.tsx  time-sheet.tsx
frontend/public/: site.webmanifest  style.css  test-kaplan-debug.ics  test-kaplan-empty.ics
frontend/scss/: stepper.scss
frontend/style/: stepper.scss  toast.css
frontend/utils/: backend-info.ts  base64.ts  constants.ts  dates.ts  iso-week.ts  (+2 more)
templates/: timesheet.jinja.md
tests/: .gitignore  cypress.config.js  package-lock.json  package.json
tools/: create-timesheet.sh
(+60 files in other folders)
