[project]
name = "KeinPlan-backend"
dynamic = ["version"]
description = "Backend for KeinPlan server."
authors = [
    {name = "Niklas Bettgen", email = "niklas@bettgen.de"},
]
dependencies = [
    "hyperlink>=21.0.0",
    "ics>=0.7.2",
    "jinja2>=3.1.4",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "waitress>=3.0.0",
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
    "flask-restful>=0.3.10",
]
requires-python = "==3.11.*"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "tox-pdm>=0.7.2",
    "flake8>=7.1.1",
    "pylint>=3.2.6",
    "mypy>=1.11.2",
    "pydocstyle>=6.3.0",
    "isort>=5.13.2",
    "black>=24.8.0",
]
